--- a/WatchPkgWithoutGlass/app/src/main/AndroidManifest.xml
+++ b/WatchPkgWithoutGlass/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
             </intent-filter>
         </activity>
         <service android:name=".BLEService" />
+        <activity
+            android:name=".KeyboardActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.DeviceDefault.Light">
+        </activity>
     </application>
 
 </manifest>
